--- a/index/style.css
+++ b/index/style.css
@@ -107,8 +107,6 @@ body {
 .player {
     position: fixed;
     bottom: 24px;
-    left: 50%;
-    transform: translateX(-50%);
     background: rgba(var(--player-bg-rgb), 0.85);
     backdrop-filter: blur(var(--blur-value));
     -webkit-backdrop-filter: blur(var(--blur-value));
@@ -120,6 +118,7 @@ body {
 
 /* Стили для плеера Default */
 .player.player--default {
+    right: 24px; /* Позиция в углу */
     width: 380px;
     height: 220px;
     display: flex;
@@ -836,7 +835,6 @@ body {
     border-color: var(--accent-color);
 }
 
-/* Стили для режима Creator Studio (светлая тема) */
 body.creator-mode {
     background-color: var(--creator-bg);
     color: var(--creator-text-primary);
@@ -1776,6 +1774,9 @@ input:checked + .slider:before {
 /* ######################################################## */
 
 .player.player--copy {
+    left: 50%; /* Позиция по центру */
+    transform: translateX(-50%);
+    right: auto;
     width: 800px;
     height: 90px;
     padding: 0;
@@ -1796,7 +1797,7 @@ input:checked + .slider:before {
 /* Тело плеера */
 .copy-player-body {
     width: 100%;
-    padding: 0 16px;
+    padding: 0 24px; /* Увеличенный отступ */
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
@@ -1804,12 +1805,12 @@ input:checked + .slider:before {
 
 /* Прогресс-бар для стиля Copy */
 .copy-progress-bar-container {
-    width: calc(100% - 32px);
+    width: calc(100% - 48px); /* Ширина равна отступам тела плеера */
     height: 3px;
     cursor: pointer;
     background-color: #535353;
     border-radius: 2px;
-    margin: 8px 16px 0 16px; /* Отступы сверху/снизу и по бокам */
+    margin: 8px 24px 0 24px;
 }
 .copy-progress-filled {
     height: 100%;
